[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MWIBC"
version = "0.1.0"
# (you can list your dependencies here under `dependencies = [...]`)

# automatically include any directory that starts with umbms or run
[tool.setuptools.packages.find]
where = ["."]
include = ["umbms*", "run*"]

